--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 #root {
+  border-style: none;
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: 10px;
+  padding: 0px;
   text-align: center;
+  border-radius: 20px;
+  border: 0px solid transparent;
 }
 
 .logo {
