--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,15 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: "Poppins";
-  src: url("/public/fonts/Poppins-SemiBold.ttf") format("truetype");
+  font-family: 'Poppins';
+  src: url('/public/fonts/Poppins-SemiBold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Poppins";
-  src: url("/public/fonts/Poppins-Medium.ttf") format("truetype");
+  font-family: 'Poppins';
+  src: url('/public/fonts/Poppins-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
 }
@@ -41,11 +41,13 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  margin: 0px;
+  padding: 0px;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #030303;
 }
 
 h1 {
